[package]
name = "workout-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.0" }
chrono = { version = "0.4" }
futures = { version = "0.3.24" }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5.0"}
serde = { version = "1.0.145", features = ["derive"]}
serde_json = { version = "1.0.85"}
tokio = { version = "1", features = ["full"] }


[profile.release]
debug = 1

[rust]
debuginfo-level = 1